Update for Servant v6.6.0

--- a/src/views/help.ejs
+++ b/src/views/help.ejs
@@ -39,12 +39,12 @@
     </div>
     <div class="main-content">
       <div class="tab">
-        <button class="tablinks grp-a" onclick="openComm(event, 'Standard')" id="defaultOpen"><i class="fas fa-info-circle"></i> Standard</button>
-        <button class="tablinks grp-b" onclick="openComm(event, 'Moderation')"><i class="fas fa-user-cog"></i> Moderation</button>
-        <button class="tablinks grp-c" onclick="openComm(event, 'Utility')"><i class="far fa-lightbulb"></i> Utility</button>
-        <button class="tablinks grp-d" onclick="openComm(event, 'Fun')"><i class="fas fa-volleyball-ball"></i> Fun</button>
-        <button class="tablinks grp-e" onclick="openComm(event, 'Interaction')"><i class="far fa-comments"></i> Interaction</button>
-        <button class="tablinks grp-f" onclick="openComm(event, 'Random')"><i class="fas fa-dice"></i> Random</button>
+        <button class="tablinks grp-a" onclick="openComm(event, 'Standard')" id="tab-standard"><i class="fas fa-info-circle"></i> Standard</button>
+        <button class="tablinks grp-b" onclick="openComm(event, 'Moderation')" id="tab-moderation"><i class="fas fa-user-cog"></i> Moderation</button>
+        <button class="tablinks grp-c" onclick="openComm(event, 'Utility')" id="tab-utility"><i class="far fa-lightbulb"></i> Utility</button>
+        <button class="tablinks grp-d" onclick="openComm(event, 'Fun')" id="tab-fun"><i class="fas fa-volleyball-ball"></i> Fun</button>
+        <button class="tablinks grp-e" onclick="openComm(event, 'Interaction')" id="tab-interaction"><i class="far fa-comments"></i> Interaction</button>
+        <button class="tablinks grp-f" onclick="openComm(event, 'Random')" id="tab-random"><i class="fas fa-dice"></i> Random</button>
       </div>
 
       <div id="Standard" class="tabcontent">
