--- a/src/views/partials/commands/fun/avatar.ejs
+++ b/src/views/partials/commands/fun/avatar.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-avatar">
     <div class="collapsible-header"><i class="fas fa-volleyball-ball"></i> Avatar</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
