--- a/src/views/partials/commands/fun/baguette.ejs
+++ b/src/views/partials/commands/fun/baguette.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-baguette">
     <div class="collapsible-header"><i class="fas fa-volleyball-ball"></i> Baguette</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
