--- a/src/views/partials/commands/fun/bubblewrap.ejs
+++ b/src/views/partials/commands/fun/bubblewrap.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-bubblewrap">
     <div class="collapsible-header"><i class="fas fa-volleyball-ball"></i> BubbleWrap</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
