--- a/src/views/partials/commands/fun/coinflip.ejs
+++ b/src/views/partials/commands/fun/coinflip.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-coinflip">
     <div class="collapsible-header"><i class="fas fa-volleyball-ball"></i> Coinflip</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
