--- a/src/views/partials/commands/fun/flip.ejs
+++ b/src/views/partials/commands/fun/flip.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-flip">
     <div class="collapsible-header"><i class="fas fa-volleyball-ball"></i> Flip</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
