--- a/src/views/partials/commands/fun/tictactoe.ejs
+++ b/src/views/partials/commands/fun/tictactoe.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-tictactoe">
     <div class="collapsible-header"><i class="fas fa-volleyball-ball"></i> TicTacToe</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
