--- a/src/views/partials/commands/interaction/cookie.ejs
+++ b/src/views/partials/commands/interaction/cookie.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-cookie">
     <div class="collapsible-header"><i class="far fa-comments"></i> Cookie</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
