--- a/src/views/partials/commands/interaction/flex.ejs
+++ b/src/views/partials/commands/interaction/flex.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-flex">
     <div class="collapsible-header"><i class="far fa-comments"></i> Flex</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
