--- a/src/views/partials/commands/interaction/pat.ejs
+++ b/src/views/partials/commands/interaction/pat.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-pat">
     <div class="collapsible-header"><i class="far fa-comments"></i> Pat</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
