--- a/src/views/partials/commands/interaction/shame.ejs
+++ b/src/views/partials/commands/interaction/shame.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-shame">
     <div class="collapsible-header"><i class="far fa-comments"></i> Shame</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
