--- a/src/views/partials/commands/interaction/slap.ejs
+++ b/src/views/partials/commands/interaction/slap.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-slap">
     <div class="collapsible-header"><i class="far fa-comments"></i> Slap</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
