--- a/src/views/partials/commands/moderation.ejs
+++ b/src/views/partials/commands/moderation.ejs
@@ -8,7 +8,7 @@
 </div>
 
 
-<ul class="collapsible">
+<ul id="ul-moderation" class="collapsible">
   <%- include('moderation/clear') -%>
   <%- include('moderation/editembed') -%>
 </ul>
