--- a/src/views/partials/commands/random/bird.ejs
+++ b/src/views/partials/commands/random/bird.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-bird">
     <div class="collapsible-header"><i class="fas fa-dice"></i> Bird</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
