--- a/src/views/partials/commands/random/cat.ejs
+++ b/src/views/partials/commands/random/cat.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-cat">
     <div class="collapsible-header"><i class="fas fa-dice"></i> Cat</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
