--- a/src/views/partials/commands/random/fennec.ejs
+++ b/src/views/partials/commands/random/fennec.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-fennec">
     <div class="collapsible-header"><i class="fas fa-dice"></i> Fennec</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
