--- a/src/views/partials/commands/random/panda.ejs
+++ b/src/views/partials/commands/random/panda.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-panda">
     <div class="collapsible-header"><i class="fas fa-dice"></i> Panda</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
