--- a/src/views/partials/commands/random/pikachu.ejs
+++ b/src/views/partials/commands/random/pikachu.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-pikachu">
     <div class="collapsible-header"><i class="fas fa-dice"></i> Pikachu</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
