--- a/src/views/partials/commands/random/sloth.ejs
+++ b/src/views/partials/commands/random/sloth.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-sloth">
     <div class="collapsible-header"><i class="fas fa-dice"></i> Sloth</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
