--- a/src/views/partials/commands/standard/help.ejs
+++ b/src/views/partials/commands/standard/help.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-help">
     <div class="collapsible-header"><i class="fas fa-info-circle"></i> Help</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
