--- a/src/views/partials/commands/standard/ping.ejs
+++ b/src/views/partials/commands/standard/ping.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-ping">
     <div class="collapsible-header"><i class="fas fa-info-circle"></i> Ping</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
