--- a/src/views/partials/commands/utility/customcommands.ejs
+++ b/src/views/partials/commands/utility/customcommands.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-customcommands">
     <div class="collapsible-header"><i class="far fa-lightbulb"></i> CustomCommands</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
