--- a/src/views/partials/commands/utility/quickpoll.ejs
+++ b/src/views/partials/commands/utility/quickpoll.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-quickpoll">
     <div class="collapsible-header"><i class="far fa-lightbulb"></i> QuickPoll</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
@@ -11,8 +11,8 @@
             <div class="cmd-alias">
                 <h3><i class="fas fa-signature"></i> Alias</h3>
                 <p>
+                    quickvoting<br />
                     quickvote
-                    quickvoting
                 </p>
             </div>
             <div class="cmd-usage">
