--- a/src/views/partials/commands/utility/rating.ejs
+++ b/src/views/partials/commands/utility/rating.ejs
@@ -1,5 +1,5 @@
-<li>
-    <div class="collapsible-header"><i class="far fa-lightbulb"></i> Rate</div>
+<li id="li-rate">
+    <div class="collapsible-header"><i class="far fa-lightbulb"></i> Rating</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
             <div class="cmd-description">
@@ -11,7 +11,7 @@
             <div class="cmd-alias">
                 <h3><i class="fas fa-signature"></i> Alias</h3>
                 <p>
-                    rating
+                    rate
                 </p>
             </div>
             <div class="cmd-usage">
@@ -20,9 +20,9 @@
                 <div class="usage-box">
                     <h4>Start a rating</h4>
                     <p>
-                        Command: <span class="highlight-me">!rate "Optional title" [time arguments]</span><br />
-                        Example 1: <span class="highlight-me">!rate "Last episode" 10d</span><br />
-                        Example 2: <span class="highlight-me">!rate 10d</span>
+                        Command: <span class="highlight-me">!rating "Optional title" [time arguments]</span><br />
+                        Example 1: <span class="highlight-me">!rating "Last episode" 10d</span><br />
+                        Example 2: <span class="highlight-me">!rating 10d</span>
                     </p>
                 </div>
             </div>
