--- a/src/views/partials/commands/utility/signup.ejs
+++ b/src/views/partials/commands/utility/signup.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-signup">
     <div class="collapsible-header"><i class="far fa-lightbulb"></i> Signup</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
