--- a/src/views/partials/commands/utility/timezone.ejs
+++ b/src/views/partials/commands/utility/timezone.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-timezone">
     <div class="collapsible-header"><i class="far fa-lightbulb"></i> Timezone</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
