--- a/src/views/partials/commands/fun/achievements.ejs
+++ b/src/views/partials/commands/fun/achievements.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-achievements">
     <div class="collapsible-header"><i class="fas fa-volleyball-ball"></i> Achievements</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
