--- a/src/views/partials/commands/fun/commands.ejs
+++ b/src/views/partials/commands/fun/commands.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-commands">
     <div class="collapsible-header"><i class="fas fa-volleyball-ball"></i> Commands</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
