--- a/src/views/partials/commands/fun/love.ejs
+++ b/src/views/partials/commands/fun/love.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-love">
     <div class="collapsible-header"><i class="fas fa-volleyball-ball"></i> Love</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
