--- a/src/views/partials/commands/fun/mirror.ejs
+++ b/src/views/partials/commands/fun/mirror.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-mirror">
     <div class="collapsible-header"><i class="fas fa-volleyball-ball"></i> Mirror</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
