--- a/src/views/partials/commands/fun/profile.ejs
+++ b/src/views/partials/commands/fun/profile.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-profile">
     <div class="collapsible-header"><i class="fas fa-volleyball-ball"></i> Profile</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
