--- a/src/views/partials/commands/interaction/beg.ejs
+++ b/src/views/partials/commands/interaction/beg.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-beg">
     <div class="collapsible-header"><i class="far fa-comments"></i> Beg</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
