--- a/src/views/partials/commands/interaction/birthday.ejs
+++ b/src/views/partials/commands/interaction/birthday.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-birthday">
     <div class="collapsible-header"><i class="far fa-comments"></i> Birthday</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
