--- a/src/views/partials/commands/interaction/bite.ejs
+++ b/src/views/partials/commands/interaction/bite.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-bite">
     <div class="collapsible-header"><i class="far fa-comments"></i> Bite</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
