--- a/src/views/partials/commands/interaction/bully.ejs
+++ b/src/views/partials/commands/interaction/bully.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-bully">
     <div class="collapsible-header"><i class="far fa-comments"></i> Bully</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
