--- a/src/views/partials/commands/interaction/cheers.ejs
+++ b/src/views/partials/commands/interaction/cheers.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-cheers">
     <div class="collapsible-header"><i class="far fa-comments"></i> Cheers</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
