--- a/src/views/partials/commands/interaction/cop.ejs
+++ b/src/views/partials/commands/interaction/cop.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-cop">
     <div class="collapsible-header"><i class="far fa-comments"></i> Cop</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
