--- a/src/views/partials/commands/interaction/dab.ejs
+++ b/src/views/partials/commands/interaction/dab.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-dab">
     <div class="collapsible-header"><i class="far fa-comments"></i> Dab</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
