--- a/src/views/partials/commands/interaction/highfive.ejs
+++ b/src/views/partials/commands/interaction/highfive.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-highfive">
     <div class="collapsible-header"><i class="far fa-comments"></i> Highfive</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
