--- a/src/views/partials/commands/interaction/hug.ejs
+++ b/src/views/partials/commands/interaction/hug.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-hug">
     <div class="collapsible-header"><i class="far fa-comments"></i> Hug</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
