--- a/src/views/partials/commands/interaction/kiss.ejs
+++ b/src/views/partials/commands/interaction/kiss.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-kiss">
     <div class="collapsible-header"><i class="far fa-comments"></i> Kiss</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
