--- a/src/views/partials/commands/interaction/poke.ejs
+++ b/src/views/partials/commands/interaction/poke.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-poke">
     <div class="collapsible-header"><i class="far fa-comments"></i> Poke</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
