--- a/src/views/partials/commands/interaction/wave.ejs
+++ b/src/views/partials/commands/interaction/wave.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-wave">
     <div class="collapsible-header"><i class="far fa-comments"></i> Wave</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
