--- a/src/views/partials/commands/interaction/wink.ejs
+++ b/src/views/partials/commands/interaction/wink.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-wink">
     <div class="collapsible-header"><i class="far fa-comments"></i> Wink</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
