--- a/src/views/partials/commands/moderation/clear.ejs
+++ b/src/views/partials/commands/moderation/clear.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-clear">
     <div class="collapsible-header"><i class="fas fa-user-cog"></i> Clear</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
