--- a/src/views/partials/commands/moderation/editembed.ejs
+++ b/src/views/partials/commands/moderation/editembed.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-editembed">
     <div class="collapsible-header"><i class="fas fa-user-cog"></i> EditEmbed</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
