--- a/src/views/partials/commands/random/dog.ejs
+++ b/src/views/partials/commands/random/dog.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-dog">
     <div class="collapsible-header"><i class="fas fa-dice"></i> Dog</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
