--- a/src/views/partials/commands/random/frog.ejs
+++ b/src/views/partials/commands/random/frog.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-frog">
     <div class="collapsible-header"><i class="fas fa-dice"></i> Frog</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
