--- a/src/views/partials/commands/random/koala.ejs
+++ b/src/views/partials/commands/random/koala.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-koala">
     <div class="collapsible-header"><i class="fas fa-dice"></i> Koala</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
