--- a/src/views/partials/commands/random/random.ejs
+++ b/src/views/partials/commands/random/random.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-random">
     <div class="collapsible-header"><i class="fas fa-dice"></i> Random</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
