--- a/src/views/partials/commands/random/redpanda.ejs
+++ b/src/views/partials/commands/random/redpanda.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-redpanda">
     <div class="collapsible-header"><i class="fas fa-dice"></i> RedPanda</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
