--- a/src/views/partials/commands/standard/botinfo.ejs
+++ b/src/views/partials/commands/standard/botinfo.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-botinfo">
     <div class="collapsible-header"><i class="fas fa-info-circle"></i> BotInfo</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
