--- a/src/views/partials/commands/standard/supporter.ejs
+++ b/src/views/partials/commands/standard/supporter.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-supporter">
     <div class="collapsible-header"><i class="fas fa-info-circle"></i> Supporter</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
