--- a/src/views/partials/commands/utility.ejs
+++ b/src/views/partials/commands/utility.ejs
@@ -3,8 +3,9 @@
   <%- include('utility/giveaway') -%>
   <%- include('utility/poll') -%>
   <%- include('utility/quickpoll') -%>
-  <%- include('utility/rate') -%>
+  <%- include('utility/rating') -%>
   <%- include('utility/remindme') -%>
+  <%- include('utility/setbirthday') -%>
   <%- include('utility/signup') -%>
   <%- include('utility/timezone') -%>
 </ul>
