--- a/src/views/partials/commands/utility/giveaway.ejs
+++ b/src/views/partials/commands/utility/giveaway.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-giveaway">
     <div class="collapsible-header"><i class="far fa-lightbulb"></i> Giveaway</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
