--- a/src/views/partials/commands/utility/poll.ejs
+++ b/src/views/partials/commands/utility/poll.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-poll">
     <div class="collapsible-header"><i class="far fa-lightbulb"></i> Poll</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
@@ -11,8 +11,8 @@
             <div class="cmd-alias">
                 <h3><i class="fas fa-signature"></i> Alias</h3>
                 <p>
+                    voting<br />
                     vote
-                    voting
                 </p>
             </div>
             <div class="cmd-usage">
