--- a/src/views/partials/commands/utility/remindme.ejs
+++ b/src/views/partials/commands/utility/remindme.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="li-remindme">
     <div class="collapsible-header"><i class="far fa-lightbulb"></i> RemindMe</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
